Added line change

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -3,12 +3,12 @@ body {
     width: 100%;
 }
 
-
 .IndexPage {
     height: 500px;
     width: 1000px;
     margin: 50px auto;
     border: 1px solid #ddd;
+    outline: none;
 
     &__cursor {
         position: absolute;
