--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,13 +1,18 @@
-body {
+$black: #0d0d0d;
+
+html, body, #root {
     height: 100%;
     width: 100%;
+    margin: 0;
+    background: $black;
+    color: #ff00ff;
+    font-family: 'Courier New';
 }
 
 .IndexPage {
-    height: 500px;
-    width: 1000px;
-    margin: 50px auto;
-    border: 1px solid #ddd;
+    height: 100%;
+    width: 100%;
+    padding: 5px;
     outline: none;
 
     &__row {
@@ -17,14 +22,18 @@ body {
 
     &__letter {
         display: inline-block;
-        min-width: 3px;
-            height: 18px;
+        min-width: 4px;
+        height: 18px;
         line-height: 18px;
         vertical-align: top;
 
         &--is-cursor {
-            background: #777;
-            color: white;
+            background: white;
+            animation: blinker 1.5s linear infinite;
         }
     }
+}
+
+@keyframes blinker {  
+  50% { background: $black; }
 }
